--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "next": "14.0.1",
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
+        "react-country-flag": "^3.1.0",
         "react-countup": "^6.5.2",
         "react-dom": "18.2.0",
         "react-modal-video": "^2.0.1",
