--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mui/icons-material": "^5.15.21",
         "@mui/material": "^5.16.0",
         "chart.js": "^4.4.2",
+        "cookies-next": "^4.2.1",
         "next": "14.0.1",
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
