--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.21",
         "@mui/material": "^5.16.0",
+        "@splidejs/react-splide": "^0.7.12",
+        "@splidejs/splide": "^4.1.4",
         "chart.js": "^4.4.2",
         "cookies-next": "^4.2.1",
         "next": "14.0.1",
@@ -22,6 +24,7 @@
         "react-country-flag": "^3.1.0",
         "react-countup": "^6.5.2",
         "react-dom": "18.2.0",
+        "react-images-uploading": "^3.1.7",
         "react-modal-video": "^2.0.1",
         "react-nice-select": "^1.0.6",
         "react-scroll-trigger": "^0.6.14",
