--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-images-uploading": "^3.1.7",
         "react-modal-video": "^2.0.1",
         "react-nice-select": "^1.0.6",
+        "react-paginate": "^8.2.0",
         "react-scroll-trigger": "^0.6.14",
         "react-slider": "^2.0.6",
         "react-visibility-sensor": "^5.1.1",
