--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.21",
+        "@mui/joy": "^5.0.0-beta.48",
         "@mui/material": "^5.16.0",
         "@splidejs/react-splide": "^0.7.12",
         "@splidejs/splide": "^4.1.4",
         "chart.js": "^4.4.2",
         "cookies-next": "^4.2.1",
+        "i18next": "^23.12.1",
         "next": "14.0.1",
+        "next-intl": "^3.17.1",
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-country-flag": "^3.1.0",
