--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "^1.7.2",
         "chart.js": "^4.4.2",
         "cookies-next": "^4.2.1",
+        "dotenv": "^16.4.5",
         "i18next": "^23.12.1",
         "next": "14.0.1",
         "next-intl": "^3.17.1",
