--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
         "sass": "sass --watch public/assets/scss/app.scss:public/assets/css/style.css"
     },
     "dependencies": {
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^5.15.21",
         "@mui/joy": "^5.0.0-beta.48",
-        "@mui/material": "^5.16.0",
+        "@mui/material": "^5.16.4",
+        "@mui/x-date-pickers": "^7.11.0",
         "@splidejs/react-splide": "^0.7.12",
         "@splidejs/splide": "^4.1.4",
         "axios": "^1.7.2",
         "chart.js": "^4.4.2",
         "cookies-next": "^4.2.1",
+        "dayjs": "^1.11.12",
         "dotenv": "^16.4.5",
+        "http-proxy-middleware": "^3.0.0",
         "i18next": "^23.12.1",
         "next": "14.0.1",
         "next-intl": "^3.17.1",
