--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,18 +53,26 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up SSH
-        run: |
-          echo "$SSH_PRIVATE_KEY" > private_key
-          chmod 600 private_key
-          eval $(ssh-agent -s)
-          ssh-add private_key
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Verify and add host key
         run: |
           ssh-keyscan -H 162.55.168.17 >> ~/.ssh/known_hosts || (echo "ssh-keyscan failed" && exit 1)
           cat ~/.ssh/known_hosts
+
+      - name: Test SSH Connection
+        run: |
+          ssh -v root@162.55.168.17 "echo 'SSH connection successful'" || (echo "SSH connection failed" && exit 1)
+        env:
+          SSH_AUTH_SOCK: ${{ env.SSH_AUTH_SOCK }}
+          SSH_AGENT_PID: ${{ env.SSH_AGENT_PID }}
+
+      - name: Print SSH Agent Info
+        run: |
+          echo "SSH_AUTH_SOCK=${{ env.SSH_AUTH_SOCK }}"
+          echo "SSH_AGENT_PID=${{ env.SSH_AGENT_PID }}"
 
       - name: Deploy
         run: |
